Implemented user registration
